Modifications regarding the new server

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,8 @@
 	<p>
 		This website currently is the home for two <a href="https://pnut.io">pnut.io</a> tools, both related to so-called Post-Count-Achievements (PCAs). Take a look at the <a href="http://wiki.pnut.io/PCA">wiki</a>!
 		<br />
-		Note that this website, and therefore both tools, are currently hosted on a free host, until I'm happy enough with them (especially the bot) to put it on an actual webserver. So expect it to be slow and unresponsive. Also, it 'sleeps' for a while every day.
+		<s>Note that this website, and therefore both tools, are currently hosted on a free host, until I'm happy enough with them (especially the bot) to put it on an actual webserver. So expect it to be slow and unresponsive. Also, it 'sleeps' for a while every day.</s>
+		<br /><strong>It's now online on new servers, actually available 24/7 and now even supports SSL!</strong>
 		<br />
 		For any questions/feedback/etc contact me (that is <a href="https://pnut.io/@hutattedonmyarm" rel="me">@hutattedonmyarm on pnut</a>)
 	</p>
