--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<p>
-		This website currently is the home for two <a href="https://pnut.io">pnut.io</a> tools, both related to so-called Post-Count-Achievements (PCAs). Take a look at the <a href="http://wiki.pnut.io/PCA">wiki</a>!
+		This website currently is the home for two <a href="https://pnut.io">pnut.io</a> tools, both related to so-called Post-Count-Achievements (PCAs). Take a look at the <a href="https://wiki.pnut.io/PCA">wiki</a>!
 		<br />
 		<s>Note that this website, and therefore both tools, are currently hosted on a free host, until I'm happy enough with them (especially the bot) to put it on an actual webserver. So expect it to be slow and unresponsive. Also, it 'sleeps' for a while every day.</s>
 		<br /><strong>It's now online on new servers, actually available 24/7 and now even supports SSL!</strong>
@@ -17,12 +17,10 @@
 	<h2>PCA to JSON</h2>
 	<p>
 		The first one is an unnamed PCA to JSON	service, basically grabbing an (inofficial) list of PCAs from the wiki and outputting them as JSON for other pnut.io clients to use. Right now, there are two ways of accessing that: <a href="pca.json">the direct json file itself</a> and <a href="pca.php">the PHP script generating it</a>. Accessing the JSON file directly is faster (although probably a neglectable amount), but might be a bit outdated. (To be fair, it doesn't change very often anyways). The PHP script checks if the JSON file has been changed recently (currently: in the last 12 hours, but that is not guaranteed to stay at 12 hours), outputs the file contents if not, otherwise grabbing the data from the wiki, parsing it, updating the JSON file, and then outputting it.
-		<br />
-		This part is fully functional so far!
 	</p>
 	<h2>PCA-Bot</h2>
 	<p>
-		Not something you can see in action on here, but also hosted here and also maintained by me: <a href="https://pnut.io/@pca_bot">@pca_bot</a>. Follow it, and it will mention you, whenever you reach a new PCA. This won't happen instantly, I'll set it to periodically (maybe once an hour? Not sure yet) check. This is also not ready in any kind or form yet.
+		Not something you can see in action on here, but also hosted here and also maintained by me: <a href="https://pnut.io/@pca_bot">@pca_bot</a>. Follow it, and it will mention you, whenever you reach a new PCA. This won't happen instantly, but check every 30 minutes for updates. There's also a history file <a href="history.json">here</a> which is a JSON fiel listing every recent pca progression of the bots followers. If you want to use that for anything you're free to do so. Also, the bots logs of the current day is visible <a href="logs.php">here</a>
 	</p>
 	<p>
 		Ways to thank me:
