Issue #5 Recent new PCAs are now displayed

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -20,7 +20,7 @@
 	</p>
 	<h2>PCA-Bot</h2>
 	<p>
-		Not something you can see in action on here, but also hosted here and also maintained by me: <a href="https://pnut.io/@pca_bot">@pca_bot</a>. Follow it, and it will mention you, whenever you reach a new PCA. This won't happen instantly, but check every 30 minutes for updates. There's also a history file <a href="history.json">here</a> which is a JSON fiel listing every recent pca progression of the bots followers. If you want to use that for anything you're free to do so. Also, the bots logs of the current day is visible <a href="logs.php">here</a>
+		Not something you can see in action on here, but also hosted here and also maintained by me: <a href="https://pnut.io/@pca_bot">@pca_bot</a>. Follow it, and it will mention you, whenever you reach a new PCA. This won't happen instantly, but check every 30 minutes for updates. There's also a history file <a href="history.json">here</a> which is a JSON file listing every recent pca progression of the bots followers. A rendered version is available <a href="recent_progressions.php">here</a>.If you want to use that for anything you're free to do so. Also, the bots logs of the current day is visible <a href="logs.php">here</a>
 	</p>
 	<p>
 		Ways to thank me:
