--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<p>
-		This website currently is the home for two <a href="https://pnut.io">pnut.io</a> tools, both related to so-called Post-Count-Achievements (PCAs). Take a look at the <a href="https://wiki.pnut.io/PCA">wiki</a>!
+		This website currently is the home for a few <a href="https://pnut.io">pnut.io</a> tools, both related to so-called Post-Count-Achievements (PCAs). Take a look at the <a href="https://wiki.pnut.io/PCA">wiki</a>!
 		<br />
 		<s>Note that this website, and therefore both tools, are currently hosted on a free host, until I'm happy enough with them (especially the bot) to put it on an actual webserver. So expect it to be slow and unresponsive. Also, it 'sleeps' for a while every day.</s>
 		<br /><strong>It's now online on new servers, actually available 24/7 and now even supports SSL!</strong>
@@ -22,11 +22,20 @@
 	<p>
 		Not something you can see in action on here, but also hosted here and also maintained by me: <a href="https://pnut.io/@pca_bot">@pca_bot</a>. Follow it, and it will mention you, whenever you reach a new PCA. This won't happen instantly, but check every 30 minutes for updates. There's also a history file <a href="history.json">here</a> which is a JSON file listing every recent pca progression of the bots followers. A rendered version is available <a href="recent_progressions.php">here</a>.If you want to use that for anything you're free to do so. Also, the bots logs of the current day is visible <a href="logs.php">here</a>
 	</p>
+	<h2>Themepicture</h2>
+	<p>
+		Temporarily set your #thememonday avatar <a href="themepicture/index.php">here</a> and have it automatically reset back to default.
+	</p>
+	<h2>Roastmonday</h2>
+	<p>
+		A #thememonday gallery showing which users participated and the avatars they chose. Go to the <a href="roastmonday/roastmonday.php">Overview</a>
+	</p>
 	<p>
 		Ways to thank me:
 		<ul>
 			<li><a href="https://paypal.me/hutattedonmyarm">Paypal</a></li>
 			<li>BTC: <code>1M7jWef9DT3Dc5y5aemec99NUuPnAzkqkn</code></li>
+			<li><a href="https://buymeacoff.ee/wedro">Buy me a coffee</a></li>
 		</ul>
 	</p>
 </body>
